# ScriptParser

./: .gitignore  README.md  apt.txt  avatars.txt  compose.py  data.json  data5.json  data6.json  data_3.json  data_5.json  data_test.json  dockerfile  dockerfile copy  example copy 2.md  example copy 3.md  example copy 4.md  example copy 5.md  example copy 6.md  example copy 7.md  example copy 8.md  example.ipynb  example.md  hi.py  longrun.py  main.py  non-heygen-pip.py  notes.md  parse.py  pdf_convert.py  play.py  pyproject.toml  requirements.txt  side_by_side_calc.md  side_by_side_test.py  syntax.md  todo.md  transition.py  trial.txt  upload.py
assets/: data8.json  data_4.json  data_5.json
avatar_options/: avatars.txt  voices.txt
examples/: example copy 2.md  example copy 3.md  example copy 4.md  example copy 5.md  example copy 6.md  example copy 7.md  example copy 8.md  example copy 9.md  example copy.md  example.md
long_scripts/: 430044682 - 1_anr6tzzl - PID 2323111.txt  demo1.md  demo2.md  demo3.md  demo4.md  demo5.md  demo6.md  demo7.md  demo8.md  demo9.md  notes.txt
notebook_scripts/: notebook_script1.md  notebook_script2.md  notebook_script3.md  notebook_script4.md  notebook_script5.md
runthrough/: example copy 0.md  example copy 1.md  example copy 2.md  example copy 3.md  example copy 4.md  example copy 5.md  example copy 6.md  example copy 7.md  example copy 8.md  example.md
scriptparser/: __init__.py  parse.py  transition.py  upload.py
stats/: M2_hw_accel_high_quality.csv  M2_hw_accel_video.csv  MW_hw_accel_low_quality.csv  composite.csv  notes.md  (+4 more)
(+8 files in other folders)
