[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptparser"
version = "0.0.1"
authors = [
  { name = "Arturo Amaya", email = "a1amaya@ucsd.edu" },
]
readme = "README.md"
requires-python = ">=3.11.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE",
  "Operating System :: OS Independent",
]
dependencies = ["ffmpeg-python==0.2.0", "pdf2image==1.17.0"]

[tool.setuptools]
py-modules = ["scriptparser.compose","scriptparser.parse", "scriptparser.transition","scriptparser.upload", "scriptparser.types.avatar_video", ""scriptparser.types.background", ""scriptparser.types.caption", "scriptparser.types.scene", ""scriptparser.types.slide", "scriptparser.types.style", "scriptparser.types.transition_in"]